add trump calling and fix edge cases